--- a/consumer/package.json
+++ b/consumer/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/microservices": "^8.4.7",
     "@nestjs/platform-express": "^8.0.0",
     "kafkajs": "^2.0.2",
     "reflect-metadata": "^0.1.13",
